fix: overflow

--- a/src/global.css
+++ b/src/global.css
@@ -10,6 +10,7 @@ body {
 }
 .overflow-hidden {
   overflow-y: hidden;
+  overflow-y: scroll;
   /* margin: 0 17px 0 0; */
 }
 .container {
